<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:id="@+id/nptp_text0" style="@style/NPTP_GridPickerTextButtonStyle" />
    <TextView android:id="@+id/nptp_text1" style="@style/NPTP_GridPickerTextButtonStyle" />
    <TextView android:id="@+id/nptp_text2" style="@style/NPTP_GridPickerTextButtonStyle" />

    <TextView android:id="@+id/nptp_text3" style="@style/NPTP_GridPickerTextButtonStyle" />
    <TextView android:id="@+id/nptp_text4" style="@style/NPTP_GridPickerTextButtonStyle" />
    <TextView android:id="@+id/nptp_text5" style="@style/NPTP_GridPickerTextButtonStyle" />

    <TextView android:id="@+id/nptp_text6" style="@style/NPTP_GridPickerTextButtonStyle" />
    <TextView android:id="@+id/nptp_text7" style="@style/NPTP_GridPickerTextButtonStyle" />
    <TextView android:id="@+id/nptp_text8" style="@style/NPTP_GridPickerTextButtonStyle" />

    <TextView android:id="@+id/nptp_text9" style="@style/NPTP_NumberPadTimePicker_AltTextButtonStyle" />
    <TextView android:id="@+id/nptp_text10" style="@style/NPTP_GridPickerTextButtonStyle" />
    <TextView android:id="@+id/nptp_text11" style="@style/NPTP_NumberPadTimePicker_AltTextButtonStyle" />

</merge>