<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/nptp_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/nptp_input_time_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/nptp_input_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NPTP_NumberPadTimePicker_InputTimeStyle" />

        <!-- The index of this view will switch between
             0 and 1 depending on the locale. -->
        <TextView
            android:id="@+id/nptp_input_ampm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/nptp_numberpad_time_picker_ampm_header_margin_start"
            android:layout_marginStart="@dimen/nptp_numberpad_time_picker_ampm_header_margin_start"
            android:layout_marginRight="@dimen/nptp_numberpad_time_picker_ampm_header_margin_end"
            android:layout_marginEnd="@dimen/nptp_numberpad_time_picker_ampm_header_margin_end"
            style="@style/NPTP_NumberPadTimePicker_InputAmPmStyle" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/nptp_backspace"
        android:layout_width="@dimen/nptp_numberpad_time_picker_backspace_button_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/nptp_ic_backspace_24dp"
        style="@style/NPTP_NumberPadTimePicker_BackspaceStyle" />

    <ImageView
        android:id="@+id/nptp_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/nptp_list_divider_material"
        android:tint="?android:attr/colorForeground"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true" />

</RelativeLayout>