...
            android:text="@string/alert_dialog"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <Button
            android:id="@+id/button2"
...
